# NEMO-contracts

./: .gitlab-ci.yml  README.md  pyproject.toml  run_tests.py
NEMO_contracts/: admin.py  apps.py  models.py  urls.py
NEMO_contracts/management/commands/: send_email_contract_reminders.py
NEMO_contracts/migrations/: 0006_alter_contractoragreementdocuments_display_order_and_more.py
NEMO_contracts/tests/: test_contracts.py  test_settings.py
NEMO_contracts/views/: contracts.py
resources/fixtures/: splash_pad_contracts.json
