[project]
name = "NEMO-contracts"
version = "1.0.1"
description = "Plugin for NEMO allowing facility managers to keep track of service contracts, procurement and contractors"
keywords = ["NEMO"]
readme = "README.md"
authors = [{name = "Center for Nanoscale Science and Technology", email = "CNSTapplications@nist.gov"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "django",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/usnistgov/NEMO-contracts"
Changelog = "https://github.com/usnistgov/NEMO-contracts/releases"
Issues = "https://github.com/usnistgov/NEMO-contracts/issues"

[project.optional-dependencies]
NEMO-CE = ["NEMO-CE>=7.0.0",]
NEMO = ["NEMO>=7.0.0",]
dev-tools = ["pre-commit", "djlint", "black"]

[tool.setuptools.packages.find]
include = ["NEMO_contracts*"]

[tool.setuptools.package-data]
NEMO_contracts = ["static/**/*", "templates/**/*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.djlint]
profile = "django"
max_attribute_length=100
max_line_length=120
ignore = "H031"